# EnglishSpeaker

./: CMakeLists.txt  README.md
include/: Speaker.h  SpeakerScheduling.h  WordsReader.h
src/: MathWords.txt  Speaker.cpp  main.cpp
